# ferridyndb

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.omc/drafts/: dynamite-implementation-plan.md
crates/dynamite-console/: Cargo.toml
crates/dynamite-console/src/: commands.rs  display.rs  executor.rs  main.rs  parser.rs
crates/dynamite-core/: Cargo.toml
crates/dynamite-core/benches/: dynamite_bench.rs  dynamite_file_bench.rs
crates/dynamite-core/src/: error.rs  lib.rs  types.rs
crates/dynamite-core/src/api/: batch.rs  builders.rs  database.rs  key_utils.rs  mod.rs  transaction.rs
crates/dynamite-core/src/btree/: mod.rs  node.rs  overflow.rs
crates/dynamite-core/src/catalog/: mod.rs  ops.rs
crates/dynamite-core/src/encoding/: binary.rs  mod.rs  number.rs  string.rs
crates/dynamite-core/src/mvcc/: gc.rs  mod.rs  ops.rs  version_chain.rs  versioned.rs  visibility.rs
crates/dynamite-core/src/storage/: file.rs  header.rs  lock.rs  mmap.rs  mod.rs
crates/dynamite-server/: Cargo.toml  README.md
crates/dynamite-server/src/: client.rs  error.rs  lib.rs  main.rs  server.rs
crates/dynamite-server/tests/: integration.rs
crates/ferridyn-bench/: Cargo.toml
crates/ferridyn-bench/benches/: benchmark.rs  benchmark_ferridyndb.rs  common.rs
crates/ferridyn-console/: Cargo.toml
crates/ferridyn-console/src/: commands.rs  display.rs  executor.rs  main.rs  parser.rs
crates/ferridyn-core/: Cargo.toml
crates/ferridyn-core/benches/: ferridyn_bench.rs  ferridyn_file_bench.rs
crates/ferridyn-core/src/: error.rs  lib.rs  types.rs
crates/ferridyn-core/src/api/: batch.rs  builders.rs  database.rs  filter.rs  key_utils.rs  mod.rs  page_store.rs  projection.rs  query.rs  transaction.rs  update.rs
crates/ferridyn-core/src/btree/: mod.rs  node.rs  ops.rs  overflow.rs
crates/ferridyn-core/src/catalog/: mod.rs  ops.rs
crates/ferridyn-core/src/encoding/: binary.rs  composite.rs
crates/ferridyn-core/src/mvcc/: gc.rs  version_chain.rs
crates/ferridyn-core/src/storage/: freelist.rs  header.rs  lock.rs  mod.rs  page.rs  pending_free.rs  slotted.rs  snapshot.rs  tombstone.rs
crates/ferridyn-server/: Cargo.toml  README.md
crates/ferridyn-server/src/: client.rs  error.rs  lib.rs  main.rs  protocol.rs  server.rs
crates/ferridyn-server/tests/: integration.rs
docs/: ferridyndb-feature-requests.md
docs/prds/: 01-update-item.md  02-filter-expressions.md  03-condition-expressions.md  04-index-query-pagination.md  05-batch-get-item.md  06-return-values.md  07-projection-expressions.md  08-messagepack-wire-protocol.md  09-global-secondary-indexes.md  10-change-streams.md  11-sort-key-range-queries.md  12-batch-write-operations.md  13-ttl-enhancements.md  14-count.md  15-vector-index.md  16-storage-integrity-quick-fixes.md  17-cow-commit-hardening.md  18-concurrent-readers-incremental-gc.md  19-merkle-checksum-tree.md
docs/prds/completed/: 01-update-item.md  02-filter-expressions.md  03-condition-expressions.md  04-index-query-pagination.md  05-batch-get-item.md  06-return-values.md  07-projection-expressions.md  (+4 more)
docs/proposals/: condition-expressions.md  global-secondary-indexes.md  index-query-pagination.md  messagepack-wire-protocol.md  projection-expressions.md  update-item.md
plugin/: .mcp.json  README.md  package.json
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
plugin/scripts/: config.mjs  memory-commit.mjs  memory-retrieval.mjs
(+10 files in other folders)
