[package]
name = "dynamite-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memmap2 = "0.9"
parking_lot = "0.12"
thiserror = "2"
bytes = "1"
xxhash-rust = { version = "0.8", features = ["xxh64"] }

[dev-dependencies]
tempfile = "3"
