[package]
name = "dynamite-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memmap2 = "0.9"
parking_lot = "0.12"
thiserror = "2"
bytes = "1"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "dynamite_bench"
harness = false
