[package]
name = "ferridyn-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fs2 = "0.4"
parking_lot = "0.12"
thiserror = "2"
bytes = "1"
xxhash-rust = { version = "0.8", features = ["xxh64", "xxh3"] }
rmp-serde = "1"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ferridyn_bench"
harness = false

[[bench]]
name = "ferridyn_file_bench"
harness = false
